@@ -26,18 +26,13 @@
 
 package org.opensearch.security;
 
-import java.io.File;
-import java.nio.charset.StandardCharsets;
-
 import com.fasterxml.jackson.databind.JsonNode;
-import org.apache.commons.io.FileUtils;
 import org.apache.hc.core5.http.HttpStatus;
 import org.apache.hc.core5.http.NoHttpResponseException;
 import org.apache.hc.core5.http.message.BasicHeader;
 import org.junit.Assert;
 import org.junit.Ignore;
 import org.junit.Test;
-
 import org.opensearch.action.admin.indices.alias.IndicesAliasesRequest;
 import org.opensearch.action.admin.indices.alias.IndicesAliasesRequest.AliasActions;
 import org.opensearch.action.admin.indices.create.CreateIndexRequest;
@@ -56,6 +51,10 @@ import org.opensearch.security.test.SingleClusterTest;
 import org.opensearch.security.test.helper.file.FileHelper;
 import org.opensearch.security.test.helper.rest.RestHelper;
 import org.opensearch.security.test.helper.rest.RestHelper.HttpResponse;
+
+import java.io.File;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 
 import static org.opensearch.security.DefaultObjectMapper.readTree;
 
@@ -574,7 +573,7 @@ public class HttpIntegrationTests extends SingleClusterTest {
             rh.executeGetRequest("", encodeBasicHeader("worf", "worf"));
             Assert.fail("NoHttpResponseException expected");
         } catch (NoHttpResponseException e) {
-            String log = FileUtils.readFileToString(new File("unittest.log"), StandardCharsets.UTF_8);
+            String log = Files.readString(new File("unittest.log").toPath(), StandardCharsets.UTF_8);
             Assert.assertTrue(log, log.contains("speaks http plaintext instead of ssl, will close the channel"));
         } catch (Exception e) {
             Assert.fail("NoHttpResponseException expected but was " + e.getClass() + "#" + e.getMessage());
